@@ -32,7 +32,10 @@ if (isDeployBuild()) {
     stage('Staging deploy') {
         node {
             unstash 'pipeline'
-            sh "ssh 'eid-test-docker01.dmz.local' bash -s -- < pipeline/application.sh update ${version}"
+            sh "ssh 'eid-test-docker01.dmz.local' bash -s -- < pipeline/application.sh update \
+                http://admin-test1.difi.eon.no \
+                http://test-statistikk-inndata.difi.no \
+                ${version}"
         }
     }
 }
