@@ -1,3 +1,4 @@
+feature/PBLEID-12955: Dynamiske URL-er mot kontaktregisteret og statistikk ingest-API-et
 feature/PBLEID-12050: Som produkteier ønsker jeg at øyeblikksbildet blir oppdatert hver time i statistikkdatabasen
 feature/PBLEID-13048: Pipeline til test
 feature/PBLEID-12049 Hente data fra kontaktregister og legge inn i statistikkløsningen
